# app/Http/Requests/RegisterRequest.php
@@ -25,14 +25,16 @@ class RegisterRequest extends FormRequest
         return [
             'role' => "required|string|in:" . Constant::CLIENT . ',' . Constant::PROFESSIONAL,
             'type' => "required|string|in:" . Constant::PERSON . ',' . Constant::FREELANCER . ',' . Constant::COMPANY,
-            'image' => 'string|image|mimes:jpg,jpeg,png|max:255',
+            'image' => 'image|mimes:jpg,jpeg,png',
             'username' => 'required|string|regex:/^\S*$/u|max:255|unique:users,username',
             'name' => 'required|string|max:255',
             'mobile_number' => 'required|string|max:255|unique:users,mobile_number',
             'phone_number' => 'nullable|string|max:255',
             'location' => 'nullable|string|max:255|exists:locations,location',
-            'cr_copy' => 'string|image|mimes:jpg,jpeg,png|max:255|required_if:type,' . Constant::COMPANY,
-            'id_copy' => 'string|image|mimes:jpg,jpeg,png|max:255|required_if:type,' . Constant::FREELANCER,
+            'services' => 'array|exists:services,id|required_if:role,' . Constant::PROFESSIONAL,
+            'categories' => 'array|exists:categories,id|required_if:role,' . Constant::PROFESSIONAL,
+            'cr_copy' => 'image|mimes:jpg,jpeg,png|required_if:type,' . Constant::COMPANY,
+            'id_copy' => 'image|mimes:jpg,jpeg,png|required_if:type,' . Constant::FREELANCER,
         ];
     }
 
@@ -60,6 +62,8 @@ class RegisterRequest extends FormRequest
             'mobile_number' => $request['mobile_number'],
             'phone_number' => $request['phone_number'],
             'location' => $request['location'],
+            'services' => $request['services'],
+            'categories' => $request['categories'],
             'cr_copy' => $request['cr_copy'],
             'id_copy' => $request['id_copy'],
         ];
